<resources>
    <string name="app_name">TA5JoséPatiño</string>
    <string name="lib_online">Lib Online</string>
    <string name="todo">TODO</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar_contrasena">Ingresar contraseña</string>
    <string name="ingresar_usuario">Ingresar usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="logo1">Logo1</string>
    <string name="busqueda_de_libro">Búsqueda de libro</string>
    <string name="header">header</string>
    <string name="libros">Libros</string>
    <string name="registrar">Registrar</string>
    <string name="usuario_nuevo_registrese">Usuario nuevo? Registrese.</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="ingresar_celular">Ingresar celular</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="ingresar_apellido">Ingresar apellido</string>
    <string name="registro_de_nuevo_usuario">Registro de nuevo usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="categoria_favorita">Categoria favorita</string>
    <string name="ingrese_categoria">Ingrese categoria</string>
    <string name="registro">Registro</string>
    <string name="categoria">Categoria</string>
    <string name="home">Home</string>
    <string name="perfil">PERFIL</string>
    <string name="searchbutton">searchButton</string>
    <string name="cell">cell</string>
    <string name="salir">SALIR</string>
    <string name="user">User</string>
    <string name="userp">userp</string>
    <string name="name">name</string>
    <string name="lname">lname</string>
    <string name="mail">mail</string>
    <string name="genre">genre</string>
    <string name="celularr">Celular: 0999999999</string>
    <string name="namu">jechaiz</string>
    <string name="fnam">Nombre: Julian</string>
    <string name="lnam">Apellido: Echaiz</string>
    <string name="mailu">Correo: jechaiz@espol.edu.ec</string>
    <string name="genru">Favorito: Terror</string>
    <string name="pl1">pl1</string>
    <string name="pl2">pl2</string>
    <string name="pl3">pl3</string>
    <string name="t1">Titulo: IT</string>
    <string name="a1">Autor: Stephen King</string>
    <string name="E1">Editorial: Viking Press</string>
    <string name="E2">Editorial: Alianza</string>
    <string name="t2">Titulo: Hamlet</string>
    <string name="E3">Editorial: Planeta</string>
    <string name="t3">Titulo: La sombra del viento</string>
    <string name="a3">Autor: Carlos Ruiz Zafón</string>
    <string name="a2">Autor: William Shakespeare</string>
    <string name="t4">Titulo: El sabueso de los Baskerville</string>
    <string name="pl4">pl4</string>
    <string name="E4">Editorial: George Newnes</string>
    <string name="a4">Autor: Arthur Conan Doyle</string>
    <string name="cd">cd</string>
    <string name="t5">IT</string>
    <string name="desc">It es una novela de terror publicada en 1986 por el escritor estadounidense Stephen King. Cuenta la historia de un grupo de siete niños que son aterrorizados por un malvado monstruo -al que llaman «Eso»- que es capaz de cambiar de forma, alimentándose del terror que produce en sus víctimas.</string>
    <string name="drama">Drama</string>
    <string name="d">D</string>
    <string name="categorias">Categorias</string>
    <string name="sel">Seleccione una categoria en especifico:</string>
    <string name="te">Te</string>
    <string name="m">M</string>
    <string name="tr">Tr</string>
    <string name="terror">Terror</string>
    <string name="misterio">Misterio</string>
    <string name="tragedia">Tragedia</string>
</resources>